--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         <p>Essential toolbox for embedded development</p>
 
 
-        <p class="view"><a href="https://github.com/embox">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/embox">View All Project on <strong>GitHub</strong></a></p>
+
+        <ul>
+          <li><a href="https://github.com/embox/embox/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/embox/embox/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/embox/embox">View On <strong>GitHub</strong></a></li>
+        </ul>
 
       </header>
       <section>
