--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <section class="page-header">
       <h1 class="project-name">Embox</h1>
       <h2 class="project-tagline">Essential toolbox for embedded development</h2>
+      <a href="https://github.com/embox/embox" class="btn">View on GitHub</a>
+      <a href="https://github.com/embox/embox/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/embox/embox/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
