Add telegram chat to contacts

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ You can
 <h2>
 <a id="join-us" class="anchor" href="#join-us" aria-hidden="true"><span class="octicon octicon-link"></span></a>Join us</h2>
 
-<p>If you would like to participate or have any question, feel free to <a href="https://github.com/embox/embox/issues/new">open an issue</a> on GitHub or leave a message in <a href="http://groups.google.com/group/embox-devel">our group</a> (mailing list <a href="mailto:embox-devel@googlegroups.com">embox-devel@googlegroups.com</a>).</p>
+<p>If you would like to participate or have any question, feel free to <a href="https://github.com/embox/embox/issues/new">open an issue</a> on GitHub or leave a message in <a href="http://groups.google.com/group/embox-devel">our group</a> (mailing list <a href="mailto:embox-devel@googlegroups.com">embox-devel@googlegroups.com</a>) or telegram chat <a href="https://t.me/embox_chat_en">https://t.me/embox_chat_en</a></p>
 
 <p>Pull requests are always appreciated!</p>
 
