Update Embox description

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
     </section>
 
     <section class="main-content">
-      <p><strong>Embox</strong> is a configurable operating system kernel designed for resource constrained and embedded systems.</p>
+      <p><strong>Embox</strong> is a configurable operating system designed for resource constrained and embedded systems.</p>
 <h2>
 <a id="main-idea" class="anchor" href="#main-idea" aria-hidden="true"><span class="octicon octicon-link"></span></a>Embox mission</h2>
 
-<p>Embox main idea is using Linux software without Linux.</p>
+<p>Embox main idea is using Linux software everywhere includes MCUs</p>
 
 <h3>What does it mean?</h3>
 <p>Imagine, you need a single application in the embedded system, but you want to use some libraries (Qt, OpenCV, etc). In Linux case you need a high-performance hardware. In Embox case you can use the software as bare-metal including the only required system parts.</p>
+
+<p> In the other words Embox is a util which allows to create a special distributive for your exact purpuse. Although there are kernel, network, file system, standard POSIX library etc. you can accurate confgurate every module. Therefore It will include the only those parts that you wish.</p>
 
 <h3>Benefits</h3>
 You can
