--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <p>Embox main idea is using Linux software everywhere includes MCUs</p>
 
 <h3>What does it mean?</h3>
-<p>Imagine, you need a single application in the embedded system, but you want to use some libraries (Qt, OpenCV, etc). In Linux case you need a high-performance hardware. In Embox case you can use the software as bare-metal including the only required system parts.</p>
+<p>Imagine, you need a single application in the embedded system, but you want to use some libraries (Qt, OpenCV, etc). In the Linux case, you need high-performance hardware. In Embox case you can use the software as bare-metal including the only required system parts.</p>
 
-<p> In the other words Embox is a util which allows to create a special distributive for your exact purpuse. Although there are kernel, network, file system, standard POSIX library etc. you can accurate confgurate every module. Therefore It will include the only those parts that you wish.</p>
+<p> In the other words, Embox is util which allows creating a special distributive for your exact purpose. Although there are kernel, network, file system, standard POSIX library etc. you can accurately configure every module. Therefore It will include only those parts that you wish.</p>
 
 <h3>Benefits</h3>
 You can
