--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <h2>
 <a id="main-idea" class="anchor" href="#main-idea" aria-hidden="true"><span class="octicon octicon-link"></span></a>Embox mission</h2>
 
-<p>Embox main idea is using Linux software everywhere includes MCUs</p>
+<p>Embox main idea is using Linux software everywhere including MCUs.</p>
 
 <h3>What does it mean?</h3>
 <p>Imagine, you need a single application in the embedded system, but you want to use some libraries (Qt, OpenCV, etc). In the Linux case, you need high-performance hardware. In Embox case you can use the software as bare-metal including the only required system parts.</p>
 
-<p> In the other words, Embox is util which allows creating a special distributive for your exact purpose. Although there are kernel, network, file system, standard POSIX library etc. you can accurately configure every module. Therefore It will include only those parts that you wish.</p>
+<p> In the other words, Embox is util which allows creating a special distributive for your exact purpose. Although there are kernel, network, file system, standard POSIX library etc. you can accurately configure every module. Therefore it will include only those parts that you wish.</p>
 
 <h3>Benefits</h3>
 You can
